[package]
name = "reqwest_rust"
version = "0.1.0"
authors = ["sufyan arain <sufyan822@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = "0.9.22"
reqwest = {version = "0.10", features = ["blocking", "json"]} 
#async-std = "1"
tokio = { version = "0.2", features = ["full"] }